# rust-ibm-mq

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  event-send.rest  readme.md  wrapper.h
audit-proxy/: Cargo.toml
audit-proxy/config/: application.conf
audit-proxy/src/: config.rs  main.rs
config/: application.conf
ibm-mq-snd/: Cargo.toml  build.rs  wrapper.h
ibm-mq-snd/config/: application.conf
ibm-mq-snd/scripts/: mq-docker.sh
ibm-mq-snd/src/: generated.rs  lib.rs  mqconfig.rs  mqdef.rs
kafka-snd/: Cargo.toml
release/: build-with-docker.sh  config.sh  env-bash.sh  env.sh  run.sh
release/linux_x64/: Dockerfile
scripts/: prepare.sh
src/: lib.rs  main.rs
src/config/: config.rs
src/kafka/: producer.rs
src/model/: bases.rs  event.rs  metamodel.rs  mod.rs
src/mq/: generated.rs  ibm_mq.rs  mod.rs  mqdef.rs
