[package]
name = "audit-proxy"
version = "0.1.0"
authors = ["anatoly <anatolse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
#kafka-snd = { path = "../kafka-snd" }
kafka = "*"
hyper = "*"
hocon = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0"
log = "0"
