[package]
name = "ibm-mq-snd"
version = "0.1.0"
authors = ["anatoly <anatolse@gmail.com>"]
edition = "2018"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
hocon = "*"
serde = { version = "*", features = ["derive"] }
env_logger = "*"
log = "*"

[build-dependencies]
bindgen = "*"
